k8s/apps/nix-cache/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nix-binary-cache
  labels:
    app.kubernetes.io/name: nix-binary-cache
