k8s/apps/nix-cache/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  tls:
    - secretName: tls-nix-store
      hosts:
        - babe-do-you-need-anything-from-the-nix.store
  rules:
    - host: babe-do-you-need-anything-from-the-nix.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attic-server
                port:
                  name: http
